--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Menu Cards</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="KhanaDotCom.jpg" type="image/x-icon">
     <!-- Font Awesome for star ratings -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
